--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.10.6",
     "@hookform/resolvers": "^2.9.11",
     "@mui/base": "^5.0.0-alpha.118",
+    "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.10",
     "@mui/styled-engine-sc": "^5.11.9",
     "@reduxjs/toolkit": "^1.9.3",
